--- a/src/less/blocks/_show-order.less
+++ b/src/less/blocks/_show-order.less
@@ -1,9 +1,10 @@
-.ordered{
+.ordered {
 	padding-left: 16px;
 	padding-right: 16px;
 	background-color: @order-item-bg;
 }
-.ordered-wrapper{
+
+.ordered-wrapper {
 	padding-top: 16px;
 	padding-bottom: 16px;
 	@media @desktop {
@@ -15,71 +16,89 @@
 		padding-bottom: 20px;
 	}
 }
-.ordered-header__title{
+
+.ordered-header__title {
 	cursor: pointer;
 	position: relative;
- 	font-size: 16px;
- 	letter-spacing: 0.5px;
- 	padding: 16px;
- 	border-bottom: 1px solid @color-line;
+	font-size: 16px;
+	letter-spacing: 0.5px;
+	padding: 16px;
+	border-bottom: 1px solid @color-line;
 }
-.ordered-header-arrow{
+
+.ordered-header-arrow {
 	cursor: pointer;
 	position: absolute;
 	top: 16px;
 	right: 16px;
 }
-.ordered-line{
+
+.ordered-line {
 	width: 100%;
 	height: 1px;
-	background-color:red;
+	background-color: red;
 }
-.ordered-item{
+
+.ordered-item {
 	padding-bottom: 16px;
 	padding-top: 16px;
 	border-bottom: 1px solid @gray;
 	@media @desktop {
 		padding-top: 30px;
 		padding-bottom: 30px;
-
 	}
 }
-.ordered-goods-item{
+
+.ordered-goods-item {
 	font-size: 12px;
-	color:@text-light-grey;	
+	color: @text-light-grey;
 	display: flex;
 	justify-content: space-between;
 	line-height: 1.2;
-	@media @desktop {font-size: 14px;}	
-	@media @desktopXL {font-size: 16px;}	
-	
+	@media @desktop {
+		font-size: 14px;
 	}
+	@media @desktopXL {
+		font-size: 16px;
+	}
+}
+
 .ordered-goods-item__price {
 	font-size: 14px;
 	padding-top: 16px;
-	text-align: right;	
+	text-align: right;
 	min-width: 70px;
-	@media @desktop{font-weight: 700;}
+	@media @desktop {
+		font-weight: 700;
+	}
 	@media @desktopXL {
 		padding-top: 0;
-		font-size: 16px;}
+		font-size: 16px;
+	}
 }
-.ordered-goods-item__img{
+
+.ordered-goods-item__img {
 	position: relative;
 	margin-left: 8px;
 	min-width: 50px;
 	min-height: 50px;
-	@media @tablet {margin-top: 8px;}	
-	@media @desktop {margin-left: 0px;}	
+	@media @tablet {
+		margin-top: 8px;
+	}
+	@media @desktop {
+		margin-left: 0px;
+	}
 	& img {
 		max-width: 50px;
 		height: auto;
-		@media @desktopXL {max-width: 80px;}	
-	}		
+		@media @desktopXL {
+			max-width: 80px;
+		}
+	}
 }
 
 
-.label-amount{
+.label-amount {
 	position: absolute;
 	right: -5px;
 	top: -5px;
@@ -89,55 +108,80 @@
 	color: @white;
 	background-color: @text-green;
 	text-align: center;
-	font-size: 12px;	
+	font-size: 12px;
+    line-height: 18px;
 }
-.ordered-goods-item__descrip{
+
+.ordered-goods-item__descrip {
 	min-width: 201px;
 	padding-left: 16px;
 	flex-grow: 2;
-	@media @desktop {padding-left: 24px}		
+	@media @desktop {
+		padding-left: 24px
+	}
 }
-.ordered-goods-item__descrip-title{
+
+.ordered-goods-item__descrip-title {
 	margin-bottom: 4px;
 }
-.ordered-goods-item__descrip-article{
+
+.ordered-goods-item__descrip-article {
 	color: @gray;
-	@media @desktop {font-size: 14px;}
+	@media @desktop {
+		font-size: 14px;
+	}
 }
-.ordered-promo {	
+
+.ordered-promo {
 	display: flex;
 	align-items: center;
 }
-.ordered-promo .input-wrapper{
+
+.ordered-promo .input-wrapper {
 	width: 60%;
 	margin-right: 8px;
 }
-.ordered-promo .input-wrapper .input-field{min-height: 48px;}
-.ordered-promo .input-wrapper .input-field__label{top:25px;}
+
+.ordered-promo .input-wrapper .input-field {
+	min-height: 48px;
+}
+
+.ordered-promo .input-wrapper .input-field__label {
+	top: 25px;
+}
 
 .ordered-promo .button-apply {
 	display: block;
 	width: 40%;
 }
-.ordered-calc{
+
+.ordered-calc {
 	padding-top: 16px;
 	padding-bottom: 16px;
 	font-size: 14px;
 	color: @order-calc;
 }
-.ordered-calc__item{	
+
+.ordered-calc__item {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	padding-bottom: 4px;
 	font-size: 14px;
 	color: @order-calc;
-	@media @desktop {padding-bottom: 8px;}
-	@media @desktopXL {font-size: 18px;}
+	@media @desktop {
+		padding-bottom: 8px;
+	}
+	@media @desktopXL {
+		font-size: 18px;
+	}
 }
-.ordered-calc__item--bold{
+
+.ordered-calc__item--bold {
 	font-weight: 700;
 	font-size: 16px;
 	color: @text-card;
-	@media @desktopXL {font-size: 20px;}
+	@media @desktopXL {
+		font-size: 20px;
+	}
 }
