--- a/src/less/sections/_header-top.less
+++ b/src/less/sections/_header-top.less
@@ -24,7 +24,7 @@
 // блок лого, регистрация, корзина и тд
 .header-menu {
 	position:relative;
-	// border:1px dashed grey;
+	border:1px dashed grey;
 
 	@media @desktop {
 		height: 114px;
