--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -71,6 +71,7 @@
 		.left-panel-nav
 			+linkLeftPanel("Главная", "../main.html")
 			+linkLeftPanel("Описание товара", "../product.html")
+			+linkLeftPanel("Заказ", "../order.html")
 			//- +linkLeftPanel("Каталог", "../catalog.html")
 
 #ui-nav-toggle Скрыть/Показать навигацию
