Добавил ссылки на home page

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -7,12 +7,22 @@ block variables
 block content
 	.container
 		.title-1.text-center.mb-55 Проект MyWalit
-		.row
+		.row.mb-30
 			.col
 				.card.align-items-center.pb-35
 					.title-2 UI-Kit
 					+button("Перейти", "ui/ui-kit.html")
-			.col
+			
+		.row
+			.col.mb-30
 				.card.align-items-center.pb-35
 					.title-2 Главная страница
 					+button("Перейти", "main.html")
+			.col
+				.card.align-items-center.pb-35
+					.title-2 Каталог товаров
+					+button("Перейти", "catalog.html")
+			.col
+				.card.align-items-center.pb-35
+					.title-2 Описание товара
+					+button("Перейти", "product.html")
