--- a/src/less/blocks/_checkbox.less
+++ b/src/less/blocks/_checkbox.less
@@ -162,5 +162,5 @@
 }
 .checkbox:focus+.checkbox-custom,
 .checkbox.has-focus+.checkbox-custom {
-	box-shadow: 0 0 15px 0 @gray;
+	// box-shadow: 0 0 15px 0 @gray;
 }
