all blocks added

--- a/src/less/base/_mixins.less
+++ b/src/less/base/_mixins.less
@@ -14,7 +14,7 @@
 	        transition: box-shadow 0.2s ease-in;
 }
 
-// Вспомогательный миксин для основного миксина, персчет под медиа-запросы
+// Вспомогательный миксин для основного миксина, пересчет под медиа-запросы
 .level-mixin-media(@margin,@md,@lg,@xl) {
 	@media @tablet {margin-@{margin}: @l1*@md;}
     @media @desktop {margin-@{margin}: @l1*@lg;}
