--- a/src/less/sections/_contact-info.less
+++ b/src/less/sections/_contact-info.less
@@ -4,11 +4,18 @@
 	color: @contacts-text;
 	padding-right: 12px;
 	padding-left: 12px;
+	padding-top: 30px;
+
 	@media @tablet{
 		padding-right: 20px;
-		padding-left: 20px;}
-	@media @desktop{font-size: 16px;}
-	@media @desktopXL{font-size: 18px;}
+		padding-left: 20px;
+		padding-top: 16px;}
+	@media @desktop{
+		font-size: 16px;
+		padding-top: 18px;}
+	@media @desktopXL{
+		font-size: 18px;
+		padding-top: 34px;}
 	
 }
 .contacts-block{
