--- a/src/less/main.less
+++ b/src/less/main.less
@@ -50,14 +50,14 @@
 @import "sections/_header-search";
 @import "sections/_header-nav";
 @import "sections/_header-top";
-@import "sections/_catalogue-section.less";
+@import "sections/_catalogue-section";
 @import "sections/_footer-subscribe";
-@import "sections/_contact-info.less";
-@import "sections/_product.less";
+@import "sections/_contact-info";
 
 // Pages
 @import "pages/catalog";
-
+@import "pages/order";
+@import "pages/product";
 
 // Utils - Always Last - !IMPORTANT
 @import "utils/_margins";
