first-commit-block-thanks-for-order

--- a/src/less/blocks/_show-order.less
+++ b/src/less/blocks/_show-order.less
@@ -64,15 +64,13 @@
 }
 
 .ordered-goods-item__price {
-	font-size: 14px;
-	padding-top: 16px;
+	font-size: 14px;	
 	text-align: right;
 	min-width: 70px;
 	@media @desktop {
-		font-weight: 700;
+		font-weight: 700;		
 	}
-	@media @desktopXL {
-		padding-top: 0;
+	@media @desktopXL {		
 		font-size: 16px;
 	}
 }
@@ -122,11 +120,12 @@
 }
 
 .ordered-goods-item__descrip-title {
-	margin-bottom: 4px;
+	margin-bottom: 5px;
 }
 
 .ordered-goods-item__descrip-article {
 	color: @gray;
+	margin-bottom: 0;
 	@media @desktop {
 		font-size: 14px;
 	}
