--- a/src/less/main.less
+++ b/src/less/main.less
@@ -54,6 +54,7 @@
 @import "sections/_footer-subscribe";
 @import "sections/_contact-info.less";
 @import "sections/_product.less";
+@import "sections/_thanks-for-ordering.less";
 
 // Pages
 @import "pages/catalog";
