add style for ui-kit

--- a/src/pug/pages/ui/thanks-for-ordering.pug
+++ b/src/pug/pages/ui/thanks-for-ordering.pug
@@ -38,3 +38,5 @@ block content
 							span.ordered-calc-text Всего к оплате
 							span.ordered-calc-price 14 229р.
 				+button-apply('оплатить', '#')
+		pre.
+			include ../section/thanks-for-ordering.pug
