--- a/src/pug/pages/catalog.pug
+++ b/src/pug/pages/catalog.pug
@@ -5,6 +5,8 @@ block variables
 	- var pageClass = 'index-page';
 
 block content
+	
+	//- Обертка для фильтра blur и мобильной навигации
 	.blur-wrapper
 		//- шапка
 		.header
