--- a/src/pug/pages/product.pug
+++ b/src/pug/pages/product.pug
@@ -40,7 +40,7 @@ block content
 				.order-one-click__close-icon(class='close-modal-window' data-modal='#order-one-click')
 				
 	
-	//- Обертка для фильтра blur
+	//- Обертка для фильтра blur и мобильной навигации
 	.blur-wrapper
 
 		//- шапка
