--- a/src/pug/sections/header_order-page.pug
+++ b/src/pug/sections/header_order-page.pug
@@ -14,7 +14,8 @@
 				+header-info__item("../img/icons/phone.svg", "+7 (495) 132-62-60")
 				.header-info__block.d-none.d-md-block.ml-10 +7 (800) 222-63-30
 
-		include ../sections/_city-selection.pug
+		#header-citi-selector
+			include ../sections/_city-selection.pug
 
 .header-menu.header-menu--empty
 	a(href="main.html").logo
