--- a/src/pug/sections/show-order.pug
+++ b/src/pug/sections/show-order.pug
@@ -1,8 +1,8 @@
-.ordered-header
+.ordered-header#ordered-products-toggle
 	.ordered-header__title Показать заказ ( #[span.ordered-header-amount 3] товара)&mdash; #[span.ordered-header__cost 15 000 р.]
 		.ordered-header-arrow
 			i.fas.fa-sort-down
-.ordered
+.ordered#ordered-products
 	.ordered-wrapper
 		.ordered-goods
 			+ordered-goods-item('good_thumbnail/blue-purse/thumb_blue-purse-1.png',' кошелек синий', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '1252-130', '4 893р.' )
