--- a/src/less/blocks/_show-order.less
+++ b/src/less/blocks/_show-order.less
@@ -2,6 +2,11 @@
 	padding-left: 16px;
 	padding-right: 16px;
 	background-color: @order-item-bg;
+	display: none;
+
+	@media @tablet {
+		display: block;
+	}
 }
 
 .ordered-wrapper {
@@ -14,6 +19,12 @@
 	@media @desktopXL {
 		padding-top: 20px;
 		padding-bottom: 20px;
+	}
+}
+
+.ordered-header {
+	@media @tablet {
+		display: none;
 	}
 }
 
@@ -65,14 +76,14 @@
 
 .ordered-goods-item__price {
 	font-size: 14px;
-	padding-top: 16px;
+	// padding-top: 16px;
 	text-align: right;
 	min-width: 70px;
 	@media @desktop {
 		font-weight: 700;
 	}
 	@media @desktopXL {
-		padding-top: 0;
+		// padding-top: 0;
 		font-size: 16px;
 	}
 }
