--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -30,6 +30,7 @@
 		p.strong Блоки
 		.left-panel-nav
 
+			+linkLeftPanel("Контакты на стр. Профиль", "contacts-for-profile.html")
 			+linkLeftPanel("Иконки", "icons.html")
 			+linkLeftPanel("Баннеры", "banner.html")
 			+linkLeftPanel("Кнопки", "buttons.html")
