add style for ui-kit

--- a/src/pug/pages/ui/profile-contacts.pug
+++ b/src/pug/pages/ui/profile-contacts.pug
@@ -43,3 +43,6 @@ block content
 					.title-4.contacts-title.contacts-title--profile Клубная программа
 					+inputField('Номер клубной карты', '', 'notCheck', 'text', '', '')
 				+button-apply('Сохранить изменения', '#')
+
+			pre.
+				include ../section/_contacts-profile.pug
