--- a/src/less/blocks/_city-selection.less
+++ b/src/less/blocks/_city-selection.less
@@ -23,6 +23,13 @@
 	} 
 
 }
+
+// Позиционируем второй блок с городами на странице Заказ в самом верху
+#order-city-selector.city-selection-wrapper {
+	@media (min-width: 784px) {top:0px;}
+	@media (min-width: 1154px){top:auto;}
+}
+
 .selection-block-head{	
 	position: sticky;
 	left: 0;
