--- a/src/less/blocks/_sections.less
+++ b/src/less/blocks/_sections.less
@@ -61,3 +61,10 @@
 		margin-bottom: 48px;
 	}
 }
+
+.section-order {
+	padding-bottom: 48px;
+
+	@media @desktop {padding-bottom: 74px;}
+	@media @desktopXL {padding-bottom: 146px;}
+}
