--- a/src/pug/sections/_city-selection.pug
+++ b/src/pug/sections/_city-selection.pug
@@ -1,4 +1,4 @@
-.city-selection-wrapper
+.city-selection-wrapper(id = cityBlockId)
 	.selection-block-head
 		a.close-selection(href="#")
 			img(src="../img/icons/close.svg", alt="закрыть")
