--- a/src/less/sections/_contact-info.less
+++ b/src/less/sections/_contact-info.less
@@ -22,6 +22,10 @@
 	margin-bottom: 24px;
 	.mixin-margin(bottom,@l3);
 	width: 100%;
+
+	&:last-child {
+		margin-bottom: 0;
+	}
 }
 .subtitle-block{
 	width: 100%;
