--- a/src/less/blocks/_filter.less
+++ b/src/less/blocks/_filter.less
@@ -25,7 +25,7 @@
 	justify-content: space-between;
 	padding: 12px 0;
 	position: relative;
-	border-bottom: 1px solid @borderMenu;
+	// border-bottom: 1px solid @borderMenu;
 
 	@media @desktop {
 		display: flex;
@@ -44,6 +44,7 @@
 
 	@media @desktop {
 		display: block;
+		padding-right: 9px;
 	}
 
 	a {
