--- a/src/pug/mixins/_color-line.pug
+++ b/src/pug/mixins/_color-line.pug
@@ -1,5 +1,5 @@
 mixin color-line
-	.color-line
+	.color-line&attributes(attributes)
 		.color-line-color-1
 		.color-line-color-2
 		.color-line-color-3
@@ -13,7 +13,7 @@ mixin color-line
 		.color-line-color-11
 
 mixin color-line-menu
-	.color-line
+	.color-line&attributes(attributes)
 		.color-line-color-1.color-line--menu
 		.color-line-color-2.color-line--menu
 		.color-line-color-3.color-line--menu
