--- a/src/pug/pages/catalog.pug
+++ b/src/pug/pages/catalog.pug
@@ -36,7 +36,7 @@ block content
 											a(href="#!") Очистить
 										.filter__close-icon#filter__close-icon
 											+icon-close
-									+color-line
+									+color-line(class="d-none d-lg-block")
 									ul.filter-menu-l1
 										li ПО ПОЛУ
 											.filter-icon-close
