fixe gradient line menu

--- a/src/less/sections/_header-nav.less
+++ b/src/less/sections/_header-nav.less
@@ -158,20 +158,11 @@ ul.menu-level-2>li {
 	@media @desktopXL {
 		margin-right: 32px;
 	}
-
-	.line-gradient--menu {
-		margin-left: 16px;
-		margin-bottom: 8px;
-
-		@media @desktop {
-			margin-left: 0;
-		}
-	}
 }
 
 ul.menu-level-2>li>a {
 	color: @text-red;
-
+	padding-bottom: 0;
 	@media @desktop {
 		padding-left: 0px;
 		padding-right: 0px;
