--- a/src/pug/sections/header-nav.pug
+++ b/src/pug/sections/header-nav.pug
@@ -13,7 +13,8 @@
 									ul.menu-level-2
 										li
 											a(href="#!").menu-icon Коллекция 1
-											+color-line-menu
+											.devide
+												+color-line-menu(class="d-none d-lg-block")
 											ul.menu-level-3
 												li
 													a(href="#!") Визитницы и кардхолдеры
@@ -47,7 +48,8 @@
 
 										li
 											a(href="#!").menu-icon Коллекция 2
-											+color-line-menu
+											.devide
+												+color-line-menu(class="d-none d-lg-block")
 											ul.menu-level-3
 												li
 													a(href="#!") Малые кошельки
@@ -59,7 +61,8 @@
 													a(href="#!") Кошельки на круговой молнии
 										li
 											a(href="#!").menu-icon Коллекция 3
-											+color-line-menu
+											.devide
+												+color-line-menu(class="d-none d-lg-block")
 											ul.menu-level-3
 												li
 													a(href="#!") Сумки на плечо
@@ -78,7 +81,8 @@
 									ul.menu-level-2
 										li
 											a(href="#!").menu-icon Все сумки
-											+color-line-menu
+											.devide
+												+color-line-menu(class="d-none d-lg-block")
 											ul.menu-level-3
 												li
 													a(href="#!") Сумки на плечо
@@ -92,7 +96,8 @@
 													a(href="#!") Рюкзаки
 										li
 											a(href="#!").menu-icon Все кошельки
-											+color-line-menu
+											.devide
+												+color-line-menu(class="d-none d-lg-block")
 											ul.menu-level-3
 												li
 													a(href="#!") Малые кошельки
@@ -104,7 +109,8 @@
 													a(href="#!") Кошельки на круговой молнии
 										li
 											a(href="#!").menu-icon Аксессуары
-											+color-line-menu
+											.devide
+												+color-line-menu(class="d-none d-lg-block")
 											ul.menu-level-3
 												li
 													a(href="#!") Визитницы и кардхолдеры
@@ -127,7 +133,8 @@
 									ul.menu-level-2
 										li 
 											a(href="#!").menu-icon Офис и Тревел
-											+color-line-menu
+											.devide
+												+color-line-menu(class="d-none d-lg-block")
 											ul.menu-level-3
 												li
 													a(href="#!") Портфели
