--- a/src/pug/sections/header-search.pug
+++ b/src/pug/sections/header-search.pug
@@ -21,7 +21,7 @@
 				.header-search-result
 					.header-search-result__category Категории
 						.devide
-							+color-line-menu
+							+color-line-menu(class="d-none d-lg-block")
 						span.header-search-result__link
 							a.header-search-result__link-item(href="") Новинки > Кошельки
 						span.header-search-result__link
@@ -36,7 +36,7 @@
 							a.header-search-result__link-item(href="") Кошельки > Кошельки на круговой молнии
 					.header-search-result__goods Товары
 						.devide
-							+color-line-menu
+							+color-line-menu(class="d-none d-lg-block")
 						span.header-search-result__link
 							a.header-search-result__link-item(href="") Кошелек «Мэйджик» с отд. для карт и мелочи
 						span.header-search-result__link
