--- a/src/pug/pages/ui/header-nav.pug
+++ b/src/pug/pages/ui/header-nav.pug
@@ -23,7 +23,8 @@ block content
 										ul.menu-level-2
 											li
 												a(href="#!").menu-icon Все сумки
-												+color-line-menu
+												.devide
+													+color-line-menu
 												ul.menu-level-3
 													li
 														a(href="#!") Сумки на плечо
@@ -37,7 +38,8 @@ block content
 														a(href="#!") Рюкзаки
 											li
 												a(href="#!").menu-icon Все кошельки
-												+color-line-menu
+												.devide
+													+color-line-menu
 												ul.menu-level-3
 													li
 														a(href="#!") Малые кошельки
@@ -49,7 +51,8 @@ block content
 														a(href="#!") Кошельки на круговой молнии
 											li
 												a(href="#!").menu-icon Аксессуары
-												+color-line-menu
+												.devide
+													+color-line-menu
 												ul.menu-level-3
 													li
 														a(href="#!") Визитницы и кардхолдеры
@@ -72,7 +75,8 @@ block content
 										ul.menu-level-2
 											li 
 												a(href="#!").menu-icon Офис и Тревел
-												+color-line-menu
+												.devide
+													+color-line-menu
 												ul.menu-level-3
 													li
 														a(href="#!") Портфели
