--- a/src/pug/pages/ui/header-search.pug
+++ b/src/pug/pages/ui/header-search.pug
@@ -28,6 +28,7 @@ block content
 					.header-search-result
 						.header-search-result__category Категории
 							.devide
+								+color-line-menu
 							span.header-search-result__link
 								a.header-search-result__link-item(href="") Новинки > Кошельки
 							span.header-search-result__link
@@ -41,7 +42,8 @@ block content
 							span.header-search-result__link
 								a.header-search-result__link-item(href="") Кошельки > Кошельки на круговой молнии
 						.header-search-result__goods Товары
-							.devide.header-search__devide
+							.devide
+								+color-line-menu
 							span.header-search-result__link
 								a.header-search-result__link-item(href="") Кошелек «Мэйджик» с отд. для карт и мелочи
 							span.header-search-result__link
