--- a/src/less/blocks/_inputs.less
+++ b/src/less/blocks/_inputs.less
@@ -2,6 +2,10 @@
 	position: relative;
 	width: 100%;
 	display: block;
+	margin-bottom: 8px;
+	@media @desktop {
+		margin-bottom: 16px;
+	}
 }
 
 /*
@@ -47,7 +51,7 @@
 }
 
 .input-field--has-focus+.input-field__label {
-	top: 0;
+	top: 2px;
 	left: 10px;
 	background-color: @white;
 	padding-left: 4px;
@@ -92,7 +96,6 @@
 	color: @red;
 	padding: 0;
 	margin: 0;
-	padding-top: 8px;
 	padding-left: 15px;
 	width: 100%;
 	display: none;
