fixed gradient mobile

--- a/src/pug/sections/header-nav.pug
+++ b/src/pug/sections/header-nav.pug
@@ -14,7 +14,7 @@
 										li
 											a(href="#!").menu-icon Коллекция 1
 											.devide
-												+color-line-menu(class="d-none d-lg-block")
+												+color-line-menu(class="d-lg-block")
 											ul.menu-level-3
 												li
 													a(href="#!") Визитницы и кардхолдеры
@@ -49,7 +49,7 @@
 										li
 											a(href="#!").menu-icon Коллекция 2
 											.devide
-												+color-line-menu(class="d-none d-lg-block")
+												+color-line-menu(class="d-lg-block")
 											ul.menu-level-3
 												li
 													a(href="#!") Малые кошельки
@@ -62,7 +62,7 @@
 										li
 											a(href="#!").menu-icon Коллекция 3
 											.devide
-												+color-line-menu(class="d-none d-lg-block")
+												+color-line-menu(class="d-lg-block")
 											ul.menu-level-3
 												li
 													a(href="#!") Сумки на плечо
@@ -82,7 +82,7 @@
 										li
 											a(href="#!").menu-icon Все сумки
 											.devide
-												+color-line-menu(class="d-none d-lg-block")
+												+color-line-menu(class="d-lg-block")
 											ul.menu-level-3
 												li
 													a(href="#!") Сумки на плечо
@@ -97,7 +97,7 @@
 										li
 											a(href="#!").menu-icon Все кошельки
 											.devide
-												+color-line-menu(class="d-none d-lg-block")
+												+color-line-menu(class="d-lg-block")
 											ul.menu-level-3
 												li
 													a(href="#!") Малые кошельки
@@ -110,7 +110,7 @@
 										li
 											a(href="#!").menu-icon Аксессуары
 											.devide
-												+color-line-menu(class="d-none d-lg-block")
+												+color-line-menu(class="d-lg-block")
 											ul.menu-level-3
 												li
 													a(href="#!") Визитницы и кардхолдеры
@@ -134,7 +134,7 @@
 										li 
 											a(href="#!").menu-icon Офис и Тревел
 											.devide
-												+color-line-menu(class="d-none d-lg-block")
+												+color-line-menu(class="d-lg-block")
 											ul.menu-level-3
 												li
 													a(href="#!") Портфели
