--- a/src/less/sections/_header-search.less
+++ b/src/less/sections/_header-search.less
@@ -71,14 +71,13 @@
 	color: @text-light-grey;
 }
 .devide {
-	display: none;
-}
-@media @desktop {
-	.devide {
-		display: block;
-		width: 100%;
-		margin-bottom: 16px;
-		margin-top: 10px;
+	display: block;
+	width: 100%;
+	margin-bottom: 16px;
+	margin-top: 10px;
+	margin-left: 16px;
+	@media @desktop {
+		margin-left: 0;
 	}
 }
 .header-search-result {
