--- a/src/less/main.less
+++ b/src/less/main.less
@@ -40,6 +40,7 @@
 @import "blocks/_color-line.less";
 @import "blocks/_show-order.less";
 @import "blocks/_color-line.less";
+@import "blocks/_goods-cart.less";
 
 
 // Sections
@@ -54,6 +55,7 @@
 @import "sections/_footer-subscribe";
 @import "sections/_contact-info.less";
 @import "sections/_product.less";
+
 
 // Pages
 @import "pages/catalog";
