--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -9,6 +9,7 @@
 			+linkLeftPanel("Оформление кода", "docs-codestyle.html")
 			+linkLeftPanel("Работа со стилями", "docs-styleguide.html")
 			+linkLeftPanel("Общие рекомендации", "docs-general-recomendations.html")
+			+linkLeftPanel("Workflow", "docs-workflow.html")
 
 	.left-panel__section
 		p.strong База
