edit font color and line-height

--- a/src/less/sections/_thanks-for-ordering.less
+++ b/src/less/sections/_thanks-for-ordering.less
@@ -28,8 +28,7 @@
 	font-size: 16px;
 	font-weight: 700;
 	color: @textMenu;
-	padding-bottom: 14px;	
-	padding-right: 50px;	
+	padding-bottom: 14px;		
 	border-bottom: 1px solid @color-line;
 	@media @desktop{font-size: 26px;}
 	@media @desktopXL{padding-right: 30px;}
@@ -40,7 +39,7 @@
 	padding-left: 10px;
 	margin-bottom: 16px;
 	line-height: 18px;
-	
+	color:@textMenu;
 	@media @desktop{
 		padding-top: 28px;
 		font-size: 20px;
@@ -49,7 +48,7 @@
 	}
 }
 .shopper-email{
-	color:@textMenu;;
+	color:@textMenu;
 	border-bottom: 1px solid @textMenu;
 	&:hover{
 		border-bottom-color: @red;
@@ -60,7 +59,8 @@
 .thanks-order-number{
 	font-size: 16px;
 	font-weight: 700;
-	padding-left: 10px;	
+	padding-left: 10px;
+	color: @textMenu;	
 	@media @desktop{		
 		font-size: 20px;
 	}
