--- a/src/less/blocks/_show-order.less
+++ b/src/less/blocks/_show-order.less
@@ -169,12 +169,15 @@
 	font-size: 14px;
 	color: @order-calc;
 	@media @desktop {
-		padding-bottom: 8px;
+		padding-bottom: 16px;
 	}
 	@media @desktopXL {
 		font-size: 18px;
+		line-height: 21px;
 	}
 }
+.ordered-calc__item:last-child{
+	margin-top: 16px;}
 
 .ordered-calc__item--bold {
 	font-weight: 700;
