Page Catalog - email input fix in modal

--- a/src/pug/pages/product.pug
+++ b/src/pug/pages/product.pug
@@ -13,7 +13,7 @@ block content
 			.form.order-subscribe(id="order-subscribe")
 				.order-subscribe__title Подписка на товар
 				.order-subscribe__inputs
-					+inputField('Email', 'Вы ничего не ввели', 'email', 'email', 'order-subscribe__inputs-item')
+					+inputField('Email', 'Неверный формат email', 'email', 'email', 'order-subscribe__inputs-item')
 					+button-buyclick("Подписаться", "#")
 					.order-subscribe__info
 						p Нажимая кнопку "Оформить заказ", вы соглашаетесь с 
