--- a/src/less/blocks/_city-selection.less
+++ b/src/less/blocks/_city-selection.less
@@ -9,7 +9,7 @@
 	
 	@media (min-width: 784px) {
 		width: 360px;
-		top:37px;
+		// top:37px;
 		
 	}
 	@media (min-width: 1154px){
@@ -25,10 +25,10 @@
 }
 
 // Позиционируем второй блок с городами на странице Заказ в самом верху
-#order-city-selector.city-selection-wrapper {
-	@media (min-width: 784px) {top:0px;}
-	@media (min-width: 1154px){top:auto;}
-}
+// #order-city-selector.city-selection-wrapper {
+// 	@media (min-width: 784px) {top:0px;}
+// 	@media (min-width: 1154px){top:auto;}
+// }
 
 .selection-block-head{	
 	position: sticky;
