--- a/src/pug/mixins/_mixins.pug
+++ b/src/pug/mixins/_mixins.pug
@@ -46,3 +46,18 @@ mixin checkboxFilter (text)
 		input.checkbox(type="checkbox")
 		span.checkbox-custom.checkbox-custom--filter
 		span.checkbox-label-text.checkbox-label-text--filter #{text}
+
+//- Миксин для товаров в корзине
+mixin goodsCart (img, text, price)
+	.goods-cart-wrapper
+		.goods-cart__img
+			img(src="../../img/good_thumbnail/blue-purse/" + img, alt="blue-purse")
+		.goods-cart__info	
+			.goods-cart__description= text
+			.goods-cart__counter-price
+				.product-counter.goods-cart__counter
+					.btn-counter.btn-counter--minus.goods-cart__counter-minus
+					span.goods-cart__count 1
+					.btn-counter.btn-counter--plus.goods-cart__counter-plus
+		.close-icon
+		.goods-cart__price= price
