--- a/src/less/blocks/_goods-cart.less
+++ b/src/less/blocks/_goods-cart.less
@@ -1,18 +1,34 @@
+.clearfix{
+	&:after {
+		content: "";
+		display: table;
+		clear: both;
+	}
+}
 .goods-cart-wrapper {
-	width: 290px;
+	width: 295px;
 	border-bottom: 1px solid @gray;
-	padding-bottom: 16px;
 	margin-bottom: 14px;
-	margin-left: 13px;
+	justify-content: space-between;
+}
+.goods-cart__img {
+	float: left;
+	width: 50px;
+	height: 50px;
+	margin-right: 13px;
 }
 .goods-cart__info {
+	float: left;
+	padding-bottom: 14px;
+}
+.goods-cart__title-icon {
 	display: flex;
-	justify-content: space-between;
-	padding-bottom: 8px;
 }
 .goods-cart__counter-price {
 	display: flex;
-	justify-content: flex-end;
+	justify-content: space-between;
+	align-items: center;
+	padding-right: 8px;
 }
 .goods-cart__description {
 	width: 198px;	
@@ -20,31 +36,28 @@
 	font-size: 12px;
 	letter-spacing: 0.04em;
 	color: @text-light-grey;
-}
-.goods-cart__img {
-	width: 50px;
-	height: 50px;
-}
-.goods-cart__counter {
-	align-items: center;
+	padding-bottom: 20px;
+	padding-right: 17px;
 }
 .goods-cart__price {
-	padding-left: 100px;
+	line-height: 1;
+	font-size: 14px;
+	color: @text-light-grey;
 }
 .goods-cart__count {
 	font-size: 14px;
+	width: 28px!important;
 }
 .goods-cart__counter-minus, .goods-cart__counter-plus {
-	width: 24px;
-	height: 24px;
+	width: 22px;
+	height: 22px;
+	background-size: 14px;
 }
 .close-icon {
 	color: @text-light-grey;
-	top: 9px;
-	right: 16px;
 	background-image: url('../../img/icons/close.svg');
 	width: 12px;
 	height: 12px;
 	cursor: pointer;
+	margin-left: 16px;
 }
-	
