first-commit-products-table

--- a/src/less/blocks/_show-order.less
+++ b/src/less/blocks/_show-order.less
@@ -140,6 +140,7 @@
 .ordered-promo .input-wrapper {
 	width: 60%;
 	margin-right: 8px;
+	margin-bottom: 0;
 }
 
 .ordered-promo .input-wrapper .input-field {
