--- a/src/less/main.less
+++ b/src/less/main.less
@@ -40,6 +40,7 @@
 @import "blocks/_color-line.less";
 @import "blocks/_show-order.less";
 @import "blocks/_color-line.less";
+@import "blocks/_products-table.less";
 
 
 // Sections
