--- a/src/pug/layouts/_mixins-links.pug
+++ b/src/pug/layouts/_mixins-links.pug
@@ -14,3 +14,4 @@ include ../mixins/_pagination.pug
 include ../mixins/_show-order.pug
 include ../mixins/_vertical-menu.pug
 include ../mixins/_color-line.pug
+include ../mixins/_products-table.pug
