--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -31,6 +31,7 @@
 		p.strong Блоки
 		.left-panel-nav
 
+			+linkLeftPanel("Таблица продуктов", "products-table.html")
 			+linkLeftPanel("Иконки", "icons.html")
 			+linkLeftPanel("Баннеры", "banner.html")
 			+linkLeftPanel("Кнопки", "buttons.html")
@@ -47,7 +48,6 @@
 			+linkLeftPanel("Показать заказ", "show-order.html")
 			+linkLeftPanel("Вертикальная навигация", "vertical-navigation.html")
 			+linkLeftPanel("Выпадающий список", "drop-down.html")
-			+linkLeftPanel("Показать заказ", "show-order.html")
 			+linkLeftPanel("Фото товара", "photo-of-product.html")
 			+linkLeftPanel("Форма заказа и подписки", "order-subscribe.html")
 			+linkLeftPanel("Аккордеон", "ui-accordeon.html")
