scipts fixed and merged

--- a/src/pug/sections/header-top.pug
+++ b/src/pug/sections/header-top.pug
@@ -38,4 +38,4 @@
 					.cart__image
 						img(src="../img/icons/bag-color.svg" alt="иконка")
 						.cart__image-total 3
-					.cart__amount.menu-icon 5850р.
+					.cart__amount 5850р.
